--- a/index.html
+++ b/index.html
@@ -7,6 +7,61 @@
     <title>Sign Up Form</title>
   </head>
   <body>
+    <aside>
+      <img src="./assets/images/odin-lined.png" alt="" />
+      <img src="./assets/images/halie-west-25xggax4bSA-unsplash.jpg" alt="" />
+      <footer>
+        Photo by
+        <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
+        <a href="https://unsplash.com/">Unsplash</a>
+      </footer>
+    </aside>
+    <main>
+      <p>
+        This is not a real online service! You know you need something like this
+        in your life to help you realize your deepest dreams. Sign up
+        <em>now</em> to get started.
+      </p>
+      <p>You <em>know</em> you want to.</p>
+      <form action="#" method="post">
+        <h3>Let's do this!</h3>
+        <section>
+          <div>
+            <label for="first_name">First name</label>
+            <input type="text" id="first_name" />
+          </div>
+          <div>
+            <label for="last_name">Last name</label>
+            <input type="text" id="last_name" />
+          </div>
+        </section>
+        <section>
+          <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" />
+            <p>Please provide valid email</p>
+          </div>
+          <div>
+            <label for="phone_number">Phone Number</label>
+            <input type="tel" id="phone_number" />
+            <p>Please provide valid phone number</p>
+          </div>
+        </section>
+        <section>
+          <div>
+            <label for="password">Password</label>
+            <input type="password" id="password" />
+            <p>Passwords do not match</p>
+          </div>
+          <div>
+            <label for="confirm_password">Confirm Password</label>
+            <input id="confirm_password" type="password" />
+          </div>
+        </section>
+        <button type="submit">Create Account</button>
+      </form>
+      <p>Already have an account? <a href="#">Log in</a></p>
+    </main>
     <script src="./index.js"></script>
   </body>
 </html>
