--- a/index.html
+++ b/index.html
@@ -24,38 +24,40 @@
       </p>
       <p>You <em>know</em> you want to.</p>
       <form action="#" method="post">
-        <h3>Let's do this!</h3>
         <section>
+          <h3>Let's do this!</h3>
           <div>
-            <label for="first_name">First name</label>
-            <input type="text" id="first_name" />
+            <div>
+              <label for="first_name">First name</label>
+              <input type="text" id="first_name" />
+            </div>
+            <div>
+              <label for="last_name">Last name</label>
+              <input type="text" id="last_name" />
+            </div>
           </div>
           <div>
-            <label for="last_name">Last name</label>
-            <input type="text" id="last_name" />
-          </div>
-        </section>
-        <section>
-          <div>
-            <label for="email">Email</label>
-            <input type="email" id="email" />
-            <p>Please provide valid email</p>
-          </div>
-          <div>
-            <label for="phone_number">Phone Number</label>
-            <input type="tel" id="phone_number" />
-            <p>Please provide valid phone number</p>
-          </div>
-        </section>
-        <section>
-          <div>
-            <label for="password">Password</label>
-            <input type="password" id="password" />
-            <p>Passwords do not match</p>
+            <div class="form-control">
+              <label for="email">Email</label>
+              <input type="email" id="email" />
+              <p class="invalid">Please provide valid email</p>
+            </div>
+            <div class="form-control">
+              <label for="phone_number">Phone Number</label>
+              <input type="tel" id="phone_number" />
+              <p class="invalid">Please provide valid phone number</p>
+            </div>
           </div>
           <div>
-            <label for="confirm_password">Confirm Password</label>
-            <input id="confirm_password" type="password" />
+            <div class="form-control">
+              <label for="password">Password</label>
+              <input type="password" id="password" />
+              <p class="invalid">Passwords do not match</p>
+            </div>
+            <div class="form-control">
+              <label for="confirm_password">Confirm Password</label>
+              <input id="confirm_password" type="password" />
+            </div>
           </div>
         </section>
         <button type="submit">Create Account</button>
