Add classes to images

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <aside>
-      <img src="./assets/images/odin-lined.png" alt="" />
-      <img src="./assets/images/halie-west-25xggax4bSA-unsplash.jpg" alt="" />
+      <img class="logo" src="./assets/images/odin-lined.png" alt="" />
+      <img
+        class="aside-background"
+        src="./assets/images/halie-west-25xggax4bSA-unsplash.jpg"
+        alt=""
+      />
       <footer>
         Photo by
         <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
