Remove background image from html (it will be set through css) Wrap logo with div.logo-container

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
   </head>
   <body>
     <aside>
-      <img class="logo" src="./assets/images/odin-lined.png" alt="" />
-      <img
-        class="aside-background"
-        src="./assets/images/halie-west-25xggax4bSA-unsplash.jpg"
-        alt=""
-      />
+      <div class="logo-container">
+        <img src="./assets/images/odin-lined.png" alt="" />
+        <h1>ODIN</h1>
+      </div>
       <footer>
         Photo by
         <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
