Finish form fields, Change font-family

--- a/index.html
+++ b/index.html
@@ -19,26 +19,27 @@
       </footer>
     </aside>
     <main>
-      <p>
-        This is not a real online service! You know you need something like this
-        in your life to help you realize your deepest dreams. Sign up
-        <em>now</em> to get started.
-      </p>
-      <p>You <em>know</em> you want to.</p>
+      <section>
+        <p>
+          This is not a real online service! You know you need something like
+          this in your life to help you realize your deepest dreams.
+        </p>
+        <p>Sign up <em>now</em> to get started.</p>
+        <p>You <em>know</em> you want to.</p>
+      </section>
+
       <form action="#" method="post">
         <section>
           <h3>Let's do this!</h3>
           <div>
-            <div>
+            <div class="form-control">
               <label for="first_name">First name</label>
               <input type="text" id="first_name" />
             </div>
-            <div>
+            <div class="form-control">
               <label for="last_name">Last name</label>
               <input type="text" id="last_name" />
             </div>
-          </div>
-          <div>
             <div class="form-control">
               <label for="email">Email</label>
               <input type="email" id="email" />
@@ -49,8 +50,6 @@
               <input type="tel" id="phone_number" />
               <p class="invalid">Please provide valid phone number</p>
             </div>
-          </div>
-          <div>
             <div class="form-control">
               <label for="password">Password</label>
               <input type="password" id="password" />
