--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
             </div>
           </div>
         </section>
-        <button type="submit">Create Account</button>
+        <div>
+          <button type="submit">Create Account</button>
+        </div>
       </form>
       <p>Already have an account? <a href="#">Log in</a></p>
     </main>
