--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <button type="submit">Create Account</button>
         </div>
       </form>
-      <p>Already have an account? <a href="#">Log in</a></p>
+      <p class="login">Already have an account? <a href="#">Log in</a></p>
     </main>
     <script src="./index.js"></script>
   </body>
