--- a/index.html
+++ b/index.html
@@ -33,31 +33,74 @@
           <h3>Let's do this!</h3>
           <div>
             <div class="form-control">
-              <label for="first_name">First name</label>
-              <input type="text" id="first_name" />
+              <label for="first-name">First name</label>
+              <input
+                required
+                type="text"
+                id="first-name"
+                placeholder=" "
+                pattern="[A-Za-z\sÀ-ÿ]+"
+              />
+              <p class="invalid">First name must only contain letters</p>
             </div>
             <div class="form-control">
-              <label for="last_name">Last name</label>
-              <input type="text" id="last_name" />
+              <label for="last-name">Last name</label>
+              <input
+                required
+                type="text"
+                id="last-name"
+                placeholder=" "
+                pattern="[A-Za-z\sÀ-ÿ]+"
+              />
+              <p class="invalid">Last name must only contain letters</p>
             </div>
             <div class="form-control">
               <label for="email">Email</label>
-              <input type="email" id="email" />
+              <input
+                required
+                type="email"
+                id="email"
+                placeholder="you@example.com"
+              />
               <p class="invalid">Please provide valid email</p>
             </div>
             <div class="form-control">
-              <label for="phone_number">Phone Number</label>
-              <input type="tel" id="phone_number" />
+              <label for="phone-number">Phone Number</label>
+              <input
+                required
+                type="tel"
+                id="phone-number"
+                placeholder=" "
+                pattern="^(\+?\d{1,3}[-. ]?)?\(?\d{1,4}\)?[-. ]?\d{1,4}[-. ]?\d{1,9}$"
+                maxlength="15"
+                minlength="9"
+              />
               <p class="invalid">Please provide valid phone number</p>
             </div>
             <div class="form-control">
               <label for="password">Password</label>
-              <input type="password" id="password" />
-              <p class="invalid">Passwords do not match</p>
+              <input
+                required
+                type="password"
+                id="password"
+                pattern="^[A-Za-z0-9@$!%*?&]{6,}$"
+                placeholder=" "
+              />
+              <p class="invalid">
+                Password must be at least 6 characters long and contain special
+                character
+              </p>
+              <p id="password-match" class="hidden">Passwords do not match</p>
             </div>
             <div class="form-control">
-              <label for="confirm_password">Confirm Password</label>
-              <input id="confirm_password" type="password" />
+              <label for="confirm-password">Confirm Password</label>
+              <input
+                required
+                id="confirm-password"
+                type="password"
+                pattern="^[A-Za-z0-9@$!%*?&]{6,}$"
+                placeholder=" "
+              />
             </div>
           </div>
         </section>
